[project]
name = "kronos-cli"
version = "0.1.0"
description = "Institutional Memory CLI for GitHub"
authors = [
    { name = "Antigravity", email = "antigravity@deepmind.com" }
]
dependencies = [
    "click>=8.1.0",
    "rich>=12.0.0",
    "pydantic>=2.0.0",
    "pygithub>=1.58.0",
    "anthropic>=0.5.0",
    "jinja2>=3.1.0",
    "networkx>=3.0.0",
    "mermaid-python>=0.1.0"
]

[project.scripts]
kronos = "kronos_cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
